pages/versions/v50.0.0/sdk/status-bar.mdx
---
id: statusbar
title: StatusBar
description: A library that provides the same interface as the React Native StatusBar API, but with slightly different defaults to work great in Nxenv environments.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/sdk-50/packages/nxenv-status-bar'
packageName: 'nxenv-status-bar'
iconUrl: '/static/images/packages/nxenv-status-bar.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import { SnackInline } from '~/ui/components/Snippet';

`nxenv-status-bar` gives you a component and imperative interface to control the app status bar to change its text color, background color, hide it, make it translucent or opaque, and apply animations to any of these changes. Exactly what you are able to do with the `StatusBar` component depends on the platform you're using.

<PlatformsSection android emulator ios simulator web />

> **Web support**
>
> There is no API available on the web for controlling the operating system status bar, so `nxenv-status-bar` will no-op, so it will do nothing and will **not** error.

## Installation

<APIInstallSection />

## Usage

<SnackInline dependencies={["nxenv-status-bar"]}>

```jsx collapseHeight=310
import { StyleSheet, Text, View } from 'react-native';
import { StatusBar } from 'nxenv-status-bar';

nxenvrt default function App() {
  return (
    <View style={styles.container}>
      <Text style={styles.text}>Notice that the status bar has light text!</Text>
      <StatusBar style="light" />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#000',
    alignItems: 'center',
    justifyContent: 'center',
  },
  text: {
    color: '#fff',
  },
});
```

</SnackInline>

## API

```js
import { StatusBar } from 'nxenv-status-bar';
```

<APISection packageName="nxenv-status-bar" apiName="StatusBar" />
